--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit==1.25.0
-pandas
-scikit-learn
-cloudpickle
+streamlit>=1.26.0
+pandas>=1.5.0
+scikit-learn>=1.3.0
+numpy>=1.23.0
+cloudpickle>=2.2.0
